syntax = "proto3";

package api.product.server.v1;

option go_package = "product/api/product/server/v1;v1";
option java_multiple_files = true;
option java_package = "api.product.server.v1";

service Product {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductReply);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductReply);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductReply);
    rpc GetProduct (GetProductRequest) returns (GetProductReply);
    rpc ListProduct (ListProductRequest) returns (ListProductReply);
}

message CreateProductRequest {}
message CreateProductReply {}

message UpdateProductRequest {}
message UpdateProductReply {}

message DeleteProductRequest {}
message DeleteProductReply {}

message GetProductRequest {}
message GetProductReply {}

message ListProductRequest {}
message ListProductReply {}